--- a/packages/oe-demo/public/index.html
+++ b/packages/oe-demo/public/index.html
@@ -20,7 +20,7 @@
 
 <body>
 	<script>
-	OpenExile.initDemo(document.body, {theme: 'dark'});
+	OpenExile.initDemo(document.body, {theme: 'dark', boardOptions: {assetPath: 'assets/'}});
 	</script>
 </body>
 </html>
