--- a/packages/oe-demo/public/index.html
+++ b/packages/oe-demo/public/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=800, initial-scale=1">
 
-	<title>&Omega;grid demo</title>
+	<title>OpenExile</title>
 	<meta name="description" content="&Omega;grid demo">
-	<meta name="author" content="reporting.cz">
+	<meta name="author" content="cechi">
 
 	<link rel="icon" href="favicon.svg" type="image/svg+xml">
 	<!--link rel="apple-touch-icon" href="/apple-touch-icon.png"-->
