--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=800, initial-scale=1">
 
 	<title>OpenExile</title>
-	<meta name="description" content="&Omega;grid demo">
+	<meta name="description" content="OpenExile demo">
 	<meta name="author" content="cechi">
 
 	<link rel="icon" href="docs/favicon.svg" type="image/svg+xml">
